# fuzzy-palm-tree

./: CMakeLists.txt  README.md  README_zh.md
src/backend/: filesystem.cpp  filesystem.hpp  main.cpp  webserver.cpp  webserver.hpp
src/frontend/: index.html  script.js  style.css
